--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matteo Di Venti - Academic Portfolio</title>
+    <title>Matteo Mario Di Venti - Academic Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Matteo Di Venti</h1>
-        <p>PhD Student in [Your Field]</p>
+        <h1>Matteo Mario Di Venti</h1>
+        <p>Master of Financial Engineering Student at UC Berkeley</p>
     </header>
 
     <nav>
@@ -42,8 +42,8 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: [Your Email]</p>
-        <p>LinkedIn: [Your LinkedIn]</p>
+        <p>Email: m4tteo.diventi@gm4il.com (4=a)</p>
+        <p>LinkedIn: https://www.linkedin.com/in/mdiventi/</p>
         <!-- Add more contact information if needed -->
     </section>
 
