--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Matteo Mario Di Venti</h1>
-        <p>Master of Financial Engineering Student at UC Berkeley</p>
+        <p>Aspiring quant engineer | UC Berkeley MFE '24</p>
     </header>
 
     <nav>
